# OpenRGB-Wallpaper-Engine

./: .gitmodules  LICENSE  README.md  coverimages.md  lively.md  wpe.md
OpenRGB-Wallpaper-Engine-Plugin/: CMakeLists.txt  LogManager.h  OpenRGBWallpaperEnginePlugin.cpp  OpenRGBWallpaperEnginePlugin.h  OpenRGBWallpaperEnginePlugin.json  OpenRGBWallpaperEnginePlugin.qrc  OpenRGBWallpaperEngineWidget.cpp  OpenRGBWallpaperEngineWidget.h  OpenRGBWallpaperEngineWidget.ui  README.md  RGBControllerInterface.h
OpenRGB-Wallpaper-Engine-Plugin/build_qt6/: ALL_BUILD.vcxproj  AnOpenRGBWallpaperPlugin.sln  AnOpenRGBWallpaperPlugin.vcxproj  AnOpenRGBWallpaperPlugin.vcxproj.filters  AnOpenRGBWallpaperPlugin_autogen.vcxproj  AnOpenRGBWallpaperPlugin_autogen.vcxproj.filters  AnOpenRGBWallpaperPlugin_autogen_timestamp_deps.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
OpenRGB-Wallpaper-Engine-Plugin/build_qt6/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
OpenRGB-Wallpaper-Engine-Plugin/build_qt6/AnOpenRGBWallpaperPlugin_autogen/: deps_Release  mocs_compilation_Release.cpp
OpenRGB-Wallpaper-Engine-Plugin/build_qt6/AnOpenRGBWallpaperPlugin_autogen/EWIEGA46WW/: qrc_OpenRGBWallpaperEnginePlugin_Release.cpp
OpenRGB-Wallpaper-Engine-Plugin/build_qt6/AnOpenRGBWallpaperPlugin_autogen/include_Release/: ui_OpenRGBWallpaperEngineWidget.h
OpenRGB-Wallpaper-Engine-Plugin/build_qt6/AnOpenRGBWallpaperPlugin_autogen/include_Release/EWIEGA46WW/: moc_OpenRGBWallpaperEnginePlugin.cpp  moc_OpenRGBWallpaperEnginePlugin.cpp.d  moc_OpenRGBWallpaperEngineWidget.cpp  moc_OpenRGBWallpaperEngineWidget.cpp.d  qrc_OpenRGBWallpaperEnginePlugin_Release_CMAKE_.cpp
OpenRGBWallpaperEngine/: Logger.vb  OpenRGBWallpaperEngine.sln  OpenRGBWallpaperEngine.vbproj  Utils.vb  frmTest.Designer.vb  frmTest.vb  frmWallpaper.Designer.vb  frmWallpaper.resx  frmWallpaper.vb
OpenRGBWallpaperEngine/My Project/: Application.Designer.vb  Application.myapp
OpenRGBWallpaperEngine2/: App.config  Application.xaml  LedCanvas.vb  Logger.vb  MainWindow.xaml  MainWindow.xaml.vb  OpenRGBClient.vb  OpenRGBWallpaperEngine2.slnx  OpenRGBWallpaperEngine2.vbproj  UserSave.vb  Utils.vb  exclude.txt
OpenRGBWallpaperEngine2/Effects/: AudioParty.vb  FireShader.vb  OfflineAudioEffects.vb  OfflineEffects.vb
OpenRGBWallpaperEngine2/My Project/: Settings.Designer.vb  Settings.settings
OpenRGBWallpaperEngine2/waywallen-plugin/: CMakeLists.txt  plugin.toml
OpenRGBWallpaperEngine2/waywallen-plugin/src/: main.cpp
waywallen-plugin/: CIRCLE_OPTIMIZATIONS.md  CMakeLists.txt  PERFORMANCE_FIX.md  README.md  main.lua  package-plugin.cmake
waywallen-plugin/src/: main.cpp
